@@ -58,6 +58,10 @@
                 <div class="ib-arrow-right-full-line"></div>
                 <div class="ib-arrow-up-full-line"></div>
                 <div class="ib-arrow-down-full-line"></div>
+                <div class="ib-arrow-up"></div>
+                <div class="ib-arrow-down"></div>
+                <div class="ib-arrow-left"></div>
+                <div class="ib-arrow-right"></div>
             </div>
         </div>
 
