@@ -28,6 +28,10 @@
 @import "scss/arrows/arrow-up-full-line";
 @import "scss/arrows/arrow-down-full-line";
 
+@import "scss/arrows/arrow-up";
+@import "scss/arrows/arrow-down";
+@import "scss/arrows/arrow-left";
+@import "scss/arrows/arrow-right";
 
 /*
     -------------------------------------------------------------------------
